# bettermq

./: Cargo.toml  LICENSE  README.md  build.rs
config/: bettermq.yaml
proto/: bettermq.proto
sdk/python/: bettermq_pb2.py  bettermq_pb2_grpc.py  gen_stub.sh  sample_consumer.py  sample_producer.py
src/: client.rs  lib.rs  server.rs
src/storage/: kv.rs
src/svc/: mod.rs  multi_queue.rs  priority_queue.rs  utils.rs  worker.rs
