[package]
name = "bettermq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the HelloWorld gRPC server
name = "bettermq"
path = "src/bin/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "bmq-cli"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tonic-web = "0.2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
sled = "0.34.7"
strum = "0.22"
strum_macros = "0.22"
clap = "2.33.3"
config = "0.11.0"
serde = "1.0.126"
serde_derive = "1.0.126"
temp-dir = "0.1.11"
rocksdb = "0.17.0"
rayon = "1.5"

[build-dependencies]
tonic-build = "0.6"
